--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.17.1",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.1.8",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-time-picker": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.5.7",
+    "redux-thunk": "^2.3.0",
+    "time-picker": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
